--- a/xorg_vote/votes/templates/votes/detail.html
+++ b/xorg_vote/votes/templates/votes/detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+<p><a href="{% url 'index' %}">Retour à la liste des votes</a></p>
+
 <h1>{{ vote.shortdesc }}</h1>
 
 <p>{{ vote.description }}</p>
@@ -25,7 +27,7 @@
         {% endfor %}
       </table>
       <p><strong>Attention : un vote est définitif et ne peut pas être changé après appui sur le bouton ci-dessous !</strong></p>
-      <input type="submit" value="Vote">
+      <input type="submit" class="btn btn-primary" value="Vote">
     </form>
   {% endif %}
 {% else %}
@@ -40,6 +42,7 @@
   </table>
 {% endif %}
 
+<hr>
 <p><a href="{% url 'index' %}">Retour à la liste des votes</a></p>
 
 {% endblock content %}
