Improve French spelling of the voting button

--- a/xorg_vote/votes/templates/votes/detail.html
+++ b/xorg_vote/votes/templates/votes/detail.html
@@ -27,7 +27,7 @@
         {% endfor %}
       </table>
       <p><strong>Attention : un vote est définitif et ne peut pas être changé après appui sur le bouton ci-dessous !</strong></p>
-      <input type="submit" class="btn btn-primary" value="Vote">
+      <input type="submit" class="btn btn-primary" value="Voter">
     </form>
   {% endif %}
 
